feat: sends signa on token transfer

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -317,7 +317,7 @@
   "sell": "Продавам",
   "semicolon": "Точка и запетая",
   "send": "Изпрати",
-  "send_burst": "Изпратете Signa",
+  "send_signa": "Изпратете Signa",
   "sender": "Подател",
   "sender_address": "Адрес на подателя",
   "sender_id": "Идент. № на подателя",
