--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -317,7 +317,7 @@
   "sell": "Vendre",
   "semicolon": "Punt i coma",
   "send": "Envia",
-  "send_burst": "Envia Signa",
+  "send_signa": "Envia Signa",
   "sender": "Remitent",
   "sender_address": "Adreça del remitent",
   "sender_id": "Identificador del remitent",
