--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -317,7 +317,7 @@
   "sell": "Prodat",
   "semicolon": "Středník",
   "send": "Poslat",
-  "send_burst": "Pošlete Signu",
+  "send_signa": "Pošlete Signu",
   "sender": "Odesílatel",
   "sender_address": "Adresa odesílatele",
   "sender_id": "ID odesílatele",
