--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -317,7 +317,7 @@
   "sell": "Verkaufen",
   "semicolon": "Semikolon",
   "send": "Senden",
-  "send_burst": "Signa senden",
+  "send_signa": "Signa senden",
   "sender": "Absender",
   "sender_address": "Absenderadresse",
   "sender_id": "Absenderidentität",
