--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -317,7 +317,7 @@
   "sell": "Πουλώ",
   "semicolon": "Ανω τελεία",
   "send": "Στείλετε",
-  "send_burst": "Αποστολή Signa",
+  "send_signa": "Αποστολή Signa",
   "sender": "Αποστολέας",
   "sender_address": "Διεύθυνση αποστολέα",
   "sender_id": "ταυτότητα αποστολέα",
