--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -334,7 +334,7 @@
   "sell": "Sell",
   "semicolon": "Semicolon",
   "send": "Send",
-  "send_burst": "Send Signa",
+  "send_signa": "Send Signa",
   "sender": "Sender",
   "sender_address": "Sender Address",
   "sender_id": "Sender ID",
