--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -317,7 +317,7 @@
   "sell": "Vender",
   "semicolon": "Punto y coma",
   "send": "Enviar",
-  "send_burst": "Enviar Signa",
+  "send_signa": "Enviar Signa",
   "sender": "Remitente",
   "sender_address": "Dirección del remitente",
   "sender_id": "Identificación del remitente",
