--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -317,7 +317,7 @@
   "sell": "Myydä",
   "semicolon": "Puolipiste",
   "send": "Lähettää",
-  "send_burst": "Lähetä Signa",
+  "send_signa": "Lähetä Signa",
   "sender": "Lähettäjä",
   "sender_address": "Lähettäjän osoite",
   "sender_id": "lähettäjän ID",
