--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -317,7 +317,7 @@
   "sell": "Vendre",
   "semicolon": "Point-virgule",
   "send": "Envoyer",
-  "send_burst": "Envoyer Signa",
+  "send_signa": "Envoyer Signa",
   "sender": "Expéditeur",
   "sender_address": "Adresse de l'expéditeur",
   "sender_id": "Identifiant de l'expéditeur",
