--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -317,7 +317,7 @@
   "sell": "Vender",
   "semicolon": "Punto e coma",
   "send": "Enviar",
-  "send_burst": "Enviar Signa",
+  "send_signa": "Enviar Signa",
   "sender": "Remitente",
   "sender_address": "Enderezo do remitente",
   "sender_id": "ID do remitente",
