--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -317,7 +317,7 @@
   "sell": "बेचना",
   "semicolon": "सेमीकोलन",
   "send": "संदेश",
-  "send_burst": "सिग्ना भेजें",
+  "send_signa": "सिग्ना भेजें",
   "sender": "प्रेषक",
   "sender_address": "भेजने वाले का पता",
   "sender_id": "प्रेषक आईडी",
