--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -317,7 +317,7 @@
   "sell": "Prodavati",
   "semicolon": "Točka i zarez",
   "send": "Poslati",
-  "send_burst": "Pošaljite Signu",
+  "send_signa": "Pošaljite Signu",
   "sender": "Pošiljatelj",
   "sender_address": "Adresa pošiljatelja",
   "sender_id": "ID pošiljatelja",
