--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -317,7 +317,7 @@
   "sell": "Menjual",
   "semicolon": "Titik koma",
   "send": "Kirim",
-  "send_burst": "Kirim Tanda",
+  "send_signa": "Kirim Tanda",
   "sender": "Pengirim",
   "sender_address": "Alamat pengirim",
   "sender_id": "ID pengirim",
