--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -317,7 +317,7 @@
   "sell": "Vendere",
   "semicolon": "Punto e virgola",
   "send": "Spedire",
-  "send_burst": "Invia firma",
+  "send_signa": "Invia firma",
   "sender": "Mittente",
   "sender_address": "Indirizzo del mittente",
   "sender_id": "identità del mittente",
