--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -317,7 +317,7 @@
   "sell": "売る",
   "semicolon": "セミコロン",
   "send": "送信する",
-  "send_burst": "シグナを送る",
+  "send_signa": "シグナを送る",
   "sender": "差出人",
   "sender_address": "差出人住所",
   "sender_id": "送信者ID",
