--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -317,7 +317,7 @@
   "sell": "Parduoti",
   "semicolon": "Kabliataškis",
   "send": "Siųsti",
-  "send_burst": "Siųskite Signą",
+  "send_signa": "Siųskite Signą",
   "sender": "Siuntėjas",
   "sender_address": "Siuntėjo adresas",
   "sender_id": "siuntėjo ID",
