--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -317,7 +317,7 @@
   "sell": "Verkopen",
   "semicolon": "Puntkomma",
   "send": "Sturen",
-  "send_burst": "Signaal verzenden",
+  "send_signa": "Signaal verzenden",
   "sender": "Afzender",
   "sender_address": "Zender adres",
   "sender_id": "zender ID",
