--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -317,7 +317,7 @@
   "sell": "Sprzedać",
   "semicolon": "Średnik",
   "send": "Wysłać",
-  "send_burst": "Wyślij sygnał",
+  "send_signa": "Wyślij sygnał",
   "sender": "Nadawca",
   "sender_address": "Adres nadawcy",
   "sender_id": "Identyfikator nadawcy",
