--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -317,7 +317,7 @@
   "sell": "Vender",
   "semicolon": "Ponto e vírgula",
   "send": "Mandar",
-  "send_burst": "Enviar Signa",
+  "send_signa": "Enviar Signa",
   "sender": "Remetente",
   "sender_address": "Endereço do remetente",
   "sender_id": "ID do remetente",
