--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -317,7 +317,7 @@
   "sell": "Vinde",
   "semicolon": "Punct şi virgulă",
   "send": "Trimite",
-  "send_burst": "Trimite-o pe Signa",
+  "send_signa": "Trimite-o pe Signa",
   "sender": "Expeditor",
   "sender_address": "Adresa expeditorului",
   "sender_id": "ID-ul expeditorului",
