--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -317,7 +317,7 @@
   "sell": "Продать",
   "semicolon": "Точка с запятой",
   "send": "Отправить",
-  "send_burst": "Отправить Signa",
+  "send_signa": "Отправить Signa",
   "sender": "Отправитель",
   "sender_address": "Адрес отправителя",
   "sender_id": "ID отправителя",
