--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -317,7 +317,7 @@
   "sell": "Predať",
   "semicolon": "Bodkočiarka",
   "send": "Pošli",
-  "send_burst": "Pošlite Signu",
+  "send_signa": "Pošlite Signu",
   "sender": "Odosielateľ",
   "sender_address": "Adresa odosielateľa",
   "sender_id": "ID odosielateľa",
