--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -317,7 +317,7 @@
   "sell": "Продај",
   "semicolon": "Тацка зарез",
   "send": "Пошаљите",
-  "send_burst": "Пошаљи Сигну",
+  "send_signa": "Пошаљи Сигну",
   "sender": "Пошиљалац",
   "sender_address": "Адреса пошиљаоца",
   "sender_id": "ИД пошиљаоца",
