--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -317,7 +317,7 @@
   "sell": "Satmak",
   "semicolon": "Noktalı virgül",
   "send": "gönder",
-  "send_burst": "Signa'yı gönder",
+  "send_signa": "Signa'yı gönder",
   "sender": "Gönderen",
   "sender_address": "Gönderen adresi",
   "sender_id": "Gönderen Kimliği",
