--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -317,7 +317,7 @@
   "sell": "Продавати",
   "semicolon": "Крапка з комою",
   "send": "Надіслати",
-  "send_burst": "Надіслати Signa",
+  "send_signa": "Надіслати Signa",
   "sender": "Відправник",
   "sender_address": "Адреса відправника",
   "sender_id": "Ідентифікатор відправника",
