--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -317,7 +317,7 @@
   "sell": "卖",
   "semicolon": "分号",
   "send": "发送",
-  "send_burst": "发送信号",
+  "send_signa": "发送信号",
   "sender": "发件人",
   "sender_address": "发件人地址",
   "sender_id": "发件人ID",
