Feat/send signa token (#1706)
* feat: sends signa on token transfer

* chore: added signa total to token transfer, improved pt transaltion

--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -18,7 +18,7 @@
   "activate_request_successful": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
   "activation_failed": "Ativação falhou:",
   "activation_success": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
-  "add_message_q": "Adiciona uma mensagem?",
+  "add_message_q": "Adicionaruma mensagem?",
   "add_note_to_self_q": "Adicionar nota a mim mesmo?",
   "add_recipient": "Adicionar Destinatário",
   "add_recipient_batch": "Adicionar vários destinatários por CSV",
@@ -34,8 +34,8 @@
   "alias_uri": "URI de alias",
   "aliases": "Apelido",
   "all_transactions": "todas as transacções",
-  "amount": "Resultar",
-  "amount_nqt": "Resultar",
+  "amount": "Montante",
+  "amount_nqt": "Montante",
   "application": "Aplicativo",
   "arbitrary_message": "Mensagem",
   "are_you_sure": "Tem certeza?",
@@ -118,10 +118,10 @@
   "downloading_blockchain": "Baixando Blockchain",
   "downloading_update": "A atualização está sendo baixada. Você será informado assim que terminar.",
   "ec_block_height": "Altura do Bloco EC",
-  "ec_block_id": "ID do bloco EC",
+  "ec_block_id": "ID do Bloco EC",
   "edit": "Editar",
   "encrypt_message": "Criptografar Mensagem",
-  "enter_pin": "Entrar no pino",
+  "enter_pin": "Digite o PIN",
   "error": "Erro",
   "error_alias": "O alias não existe.",
   "error_alias_not_for_sale": "Este alias não está mais à venda.",
@@ -317,7 +317,7 @@
   "sell": "Vender",
   "semicolon": "Ponto e vírgula",
   "send": "Mandar",
-  "send_burst": "Enviar Signa",
+  "send_signa": "Enviar Signa",
   "sender": "Remetente",
   "sender_address": "Endereço do remetente",
   "sender_id": "ID do remetente",
