--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -517,5 +517,7 @@
   "verify_alias": "Проверить доступность",
   "verify_alias_description": "Введите псевдоним и проверьте его доступность.",
   "view": "Увидеть",
-  "view_alias": "Посмотреть псевдоним"
+  "view_alias": "Посмотреть псевдоним",
+  "recipient_required": "Требуется получатель",
+  "unregistered_address": "Незарегистрированный адрес"
 }
