--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -517,5 +517,7 @@
   "verify_alias": "Verfügbarkeit prüfen",
   "verify_alias_description": "Geben Sie Ihren Aliasnamen ein und überprüfen Sie seine Verfügbarkeit",
   "view": "Anzeigen",
-  "view_alias": "Alias anzeigen"
+  "view_alias": "Alias anzeigen",
+  "recipient_required": "Empfänger ist erforderlich",
+  "unregistered_address": "Nicht registrierte Adresse"
 }
