--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -517,5 +517,7 @@
   "verify_alias": "Перевірте наявність",
   "verify_alias_description": "Введіть свій псевдонім і перевірте його доступність",
   "view": "Бачити",
-  "view_alias": "Переглянути псевдонім"
+  "view_alias": "Переглянути псевдонім",
+  "recipient_required": "Потрібен одержувач",
+  "unregistered_address": "Незареєстрована адреса"
 }
