feat: src44 account selector

--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -32,7 +32,7 @@
   "alias_sale_cancellation": "Cancelamento de venda de alias",
   "alias_transfer": "Transferência de alias",
   "alias_uri": "URI de alias",
-  "aliases": "Apelido",
+  "aliases": "Aliases",
   "all_transactions": "todas as transacções",
   "amount": "Montante",
   "amount_nqt": "Montante",
@@ -129,7 +129,7 @@
   "error_alias_not_from_sender": "O alias não pertence ao remetente.",
   "error_alias_not_yet_registered": "Alias ainda não foi registrado.",
   "error_alias_owned_by_other_account": "Alias já pertence a outra conta.",
-  "error_alias_transfer_genesis": "Não é permitido transferir apelidos para a conta do Genesis.",
+  "error_alias_transfer_genesis": "Não é permitido transferir aliases para a conta do Genesis.",
   "error_ask_order_filled": "Peça pedido já preenchido.",
   "error_bid_order_filled": "Pedido de lance já preenchido.",
   "error_clipboard_copy": "A cópia para a área de transferência falhou.",
@@ -499,7 +499,7 @@
   "asset_trade": "Negocie no SignumSwap",
   "can-buy-alias": "O Alias está à venda e pode ser adquirido. Clique em 'Comprar' se você estiver disposto a adquirir o Alias",
   "created": "Criada",
-  "edit_alias": "Editar apelido",
+  "edit_alias": "Editar Alias",
   "edit_alias_content": "Editar conteúdo",
   "enter_account_id": "Insira o ID da conta",
   "enter_alias_name": "Digite o nome alternativo",
